--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <nav id="main-nav" class="flex items-center justify-between">
         <div class="center flex items-center justify-between justify-center">
-          <a href='index.html'></a>
+          <a href='index.html'>
             <button class="btn1 btn1-primary">ANALOG CLOCK</button>
           </a>
           <a href='index1.html'>
